# mach-6

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  Makefile  README.md  build.rs  nightly.sh  package-lock.json  package.json  run-nightly.ps1  tsconfig.json
benches/: all_websites.rs
benches/all_websites/: html.rs  html_old.rs  html_scratch.rs  json.rs  main.rs  stats.rs
benches/all_websites/assets/: report.html
benches/all_websites/ui/: report.html  report.ts
scraper/: Cargo.toml
scraper/src/: node.rs  selector.rs
scraper/src/element_ref/: bloom_filter.rs  element.rs  mod.rs  selector_map.rs  style_sharing.rs
scraper/src/html/: mod.rs  tree_sink.rs
scripts/: generate_reports_index.py
src/: cssparser.rs  lib.rs  main.rs  parse.rs  preprocessing.rs  result.rs  structs.rs  stylo_interface.rs
src/parse/: cssparser.rs
src/preprocessing/: concretize.rs  distribute.rs  mod.rs
src/snapshots/: mach_6__cssparser__tests__parses_github_rust_scraper_css.snap  mach_6__parse__tests__parses_github_rust_scraper_css.snap
templates/all_websites/: report.html
tests/: ensures_dir.rs  websites_suite.rs
tsc/: Cargo.toml
tsc/src/: lib.rs
