[package]
name = "mach-6"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
scraper = { path = "./scraper", features = ["serde"] }
cssparser = "0.36.0"
selectors = { path = "./stylo/selectors" }
thiserror = "2.0.17"
serde = { version = "1.0.228", features = ["derive"] }
ego-tree = "0.10.0"
serde_yml = "0.0.12"
style = { path = "./stylo/style", package = "stylo" }
smallvec = "1.0"

[dev-dependencies]
insta = { version = "1.43.2", features = ["yaml"] }
tempfile = "3"
criterion = "0.7.0"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

[[bench]]
name = "all_websites"
harness = false

[workspace]
resolver = "3"
members = ["scraper"]
exclude = ["stylo"]